syntax = "proto2";

package Gazillion;

import "ChatCommon.proto";
import "CommonMessages.proto";

enum GroupingOperationType {
	eGOP_InvitePlayer	= 1;
	eGOP_AcceptInvite	= 2;
	eGOP_ServerNotification	= 3;
	eGOP_KickPlayer	= 4;
}

enum GroupingOperationResult {
	eGOPR_Success	= 1;
	eGOPR_SystemError	= 2;
	eGOPR_TargetPlayerNotFound	= 3;
	eGOPR_TargetedSelf	= 4;
	eGOPR_AlreadyHasInvite	= 5;
	eGOPR_PartyFull	= 6;
	eGOPR_NotLeader	= 7;
	eGOPR_PendingPartyDisbanded	= 8;
	eGOPR_AutoParyPreventsKick	= 9;
}

enum GroupingStateOfPlayer {
	eGSOP_Solo	= 1;
	eGSOP_PendingInvite	= 2;
	eGSOP_InGroup	= 3;
}

message PerPlayerInfo {
	required string	playerName	= 1;
	required uint64	playerSessionId	= 2;
	required uint64	playerDbId	= 3;
}

message ClientInvitedToGroup {
	required string	invitingPlayerName	= 1;
	required NetStructWarpDest	warpDest	= 2;
}

message ClientInviteAcceptFailed {
}

message ClientCreateGroup {
	required uint64	groupId	= 1;
	required uint64	leaderSessionId	= 2;
	required string	leaderName	= 3;
}

message PlayerJoinedGroup {
	required string	joiningPlayerName	= 1;
	required uint64	playerSessionId	= 2;
	required uint64	groupId	= 3;
}

message PlayerLeftGroup {
	required string	leaverName	= 1;
	required uint64	playerSessionId	= 2;
	optional uint64	newLeaderSessionId	= 3;
	required uint64	groupId	= 4;
	required GroupLeaveReason	leaveReason	= 5;
}

message PlayerChangedGroupLeader {
	required string	oldLeader	= 1;
	required uint64	oldLeaderSessionId	= 2;
	required string	newLeader	= 3;
	required uint64	newLeaderSessionId	= 4;
}

message ClientBootedFromGroup {
	required uint64	groupId	= 1;
	required GroupLeaveReason	leaveReason	= 2;
}

message KickGroupMemberAttemptFailed {
	required GroupingOperationResult	reason	= 1;
}

message PlayerDeclinedInvite {
	optional string	declinerName	= 1;
	optional uint64	declinerSessionId	= 2;
}

message CurrentPartyInfo {
	required uint64	groupId	= 1;
	required PerPlayerInfo	leader	= 3;
	repeated PerPlayerInfo	members	= 4;
}

message ChatResponseToExternalLogin {
	optional bytes	someresponse	= 1;
}

message ChatNormalMessage {
	required ChatRoomTypes	roomType	= 1;
	required string	fromPlayerName	= 2;
	required string	toPlayerName	= 3;
	required ChatMessage	theMessage	= 4;
}

message ChatTellMessage {
	required string	fromPlayerName	= 1;
	required string	toPlayerName	= 2;
	required ChatMessage	theMessage	= 3;
}

message ChatBroadcastMessage {
	required ChatRoomTypes	roomType	= 1;
	required string	fromPlayerName	= 2;
	required ChatMessage	theMessage	= 3;
}

message ChatErrorMessage {
	required ChatErrorMessages	errorMessage	= 1;
}

message GroupingReportInvitationDestinationForPortal {
	required uint64	acceptingPlayerDbId	= 1;
	required uint64	invitingPlayerDbId	= 2;
	required uint64	requestingGameId	= 3;
	optional NetStructWarpDest	warpToDest	= 4;
}

message GroupingOperationResultMsg {
	required uint64	requestingGameId	= 1;
	required uint64	requestingPlayerDbId	= 2;
	required GroupingOperationType	opType	= 3;
	required GroupingOperationResult	opResult	= 4;
	optional uint64	groupId	= 5;
	optional PerPlayerInfo	leaderInfo	= 6;
	repeated PerPlayerInfo	currentPartyInfo	= 7;
}

message GroupingManagerRemovedPlayer {
	required uint64	requestingGameId	= 1;
	required PerPlayerInfo	removedPlayer	= 2;
	required uint64	groupId	= 3;
	optional PerPlayerInfo	newLeader	= 4;
	optional uint64	previousLeaderDbId	= 6;
	required GroupLeaveReason	leaveReason	= 5;
}

message GroupingManagerAddedPlayer {
	required uint64	requestingGameId	= 1;
	required PerPlayerInfo	addedPlayer	= 2;
	required uint64	groupId	= 3;
}

message GroupingManagerCreateGroup {
	required uint64	requestingGameId	= 1;
	required uint64	groupId	= 2;
	required PerPlayerInfo	leaderInfo	= 3;
}

message GroupingManagerPlayerEnteredRegion {
	required uint64	playerDbId	= 1;
	required uint64	requestingGameId	= 2;
	required uint64	groupId	= 3;
	optional PerPlayerInfo	leaderInfo	= 4;
	repeated PerPlayerInfo	members	= 5;
}

message ChatCreateChatRoomResult {
	required uint64	requestingGameId	= 3;
	optional bool	success	= 1 [default = false];
	optional string	reason	= 2;
}

message ChatAddPlayerToRoomResult {
	required uint64	requestingGameId	= 3;
	optional bool	success	= 1 [default = false];
	optional string	reason	= 2;
}

message ChatScrubTextResult {
	required uint64	requestingGameId	= 1;
	required string	textOriginal	= 2;
	required string	textScrubbed	= 3;
	required uint64	remoteJobId	= 4;
}

